compact and reduced

--- a/appDev/app6K/try-supergrid/styles/main.scss
+++ b/appDev/app6K/try-supergrid/styles/main.scss
@@ -15,504 +15,12 @@ p,ul,h1,h2 {
     background-color: goldenrod;
 }
 
-
-
-// --------------------------------------------------------------
-// MMS grid settings and formula
-// 2019.1.1
-//
-// Naming:
-// screen → | [menu] [main] [side] | ← screen
-//
-// Compact mode:
-// screen → | [menu] | ← screen
-// screen → | [main] | ← screen
-// screen → | [side] | ← screen
-//
-// overmain, overmenu, overside
-// — same columns with horizontal padding-space
-//
-// --------------------------------------------------------------
-
-// ------------------------------------------ settings
-
-$grid-settings--screensize-for-compact-view: 900px;
-
-$screenForCompactGrid: 'max-width: #{$grid-settings--screensize-for-compact-view}';
-$screenNotCompactGrid: 'min-width: #{$grid-settings--screensize-for-compact-view + 1}';
-
-$grid-settings--column-gap:    1.0rem;
-$grid-settings--row-gap:       1.0rem;
-$grid-settings--screenspacer:  minmax(0, 1fr);
-$grid-settings--width-of-menu: 16vw;
-$grid-settings--width-of-side: 16vw;
-
-// ------------------------------------------ formulas
-
-$BEGIN--grid-formula:        unquote(" [ ") full-start;
-$END--grid-formula:          full-end unquote(" ] ");
-$SCREEN-SPACE--grid-formula: unquote(" ] ") $grid-settings--screenspacer unquote(" [ ");
-$MIDDLE-SPACE--grid-formula: unquote(" ] ") 0 unquote(" [ ");
-
-$CONTENT--grid-formula:
-    1fr unquote(" [b] ")
-    1fr unquote(" [c] ")
-    1fr unquote(" [d midpoint] ")
-    1fr unquote(" [e] ")
-    1fr unquote(" [f] ")
-    1fr ;
-$MAIN--grid-formula:
-    main-start a
-        unquote(" ] ")
-            $CONTENT--grid-formula
-        unquote(" [ ")
-    main-end g
-    ;
-$OVERMAIN--grid-formula:
-    overmain-start
-        $MIDDLE-SPACE--grid-formula
-            $MAIN--grid-formula
-        $MIDDLE-SPACE--grid-formula
-    overmain-end
-    ;
-$OVERMENU--grid-formula:
-    overmenu-start
-        $MIDDLE-SPACE--grid-formula
-            menu-start
-            unquote(" ] ")
-                $grid-settings--width-of-menu
-            unquote(" [ ")
-            menu-end
-        $MIDDLE-SPACE--grid-formula
-    overmenu-end
-    ;
-$OVERSIDE--grid-formula:
-    overside-start
-        $MIDDLE-SPACE--grid-formula
-            side-start
-            unquote(" ] ")
-                $grid-settings--width-of-side
-            unquote(" [ ")
-            side-end
-        $MIDDLE-SPACE--grid-formula
-    overside-end
-    ;
-
-
-// --------------------------------------------------------------
-// PRIMARY COLUMNS
-// --------------------------------------------------------------
-
-
-// ------------------------------------------ full grid
-$grid-template-columns--full:
-    $BEGIN--grid-formula
-        $SCREEN-SPACE--grid-formula
-            $OVERMENU--grid-formula
-            $OVERMAIN--grid-formula
-            $OVERSIDE--grid-formula
-        $SCREEN-SPACE--grid-formula
-    $END--grid-formula;
-// ------------------------------------------ content fallback
-$grid-template-columns--main:
-    $BEGIN--grid-formula
-        overmain-start
-        overside-start
-        overmenu-start
-            menu-start
-            side-start
-                $MAIN--grid-formula
-            menu-end
-            side-end
-        overmain-end
-        overside-end
-        overmenu-end
-    $END--grid-formula;
-// ------------------------------------------ overmain grid
-$grid-template-columns--overmain:
-    $BEGIN--grid-formula
-        overmain-start
-        overmenu-start
-        overside-start
-            $MIDDLE-SPACE--grid-formula
-                menu-start
-                side-start
-                    $MAIN--grid-formula
-                side-end
-                menu-end
-            $MIDDLE-SPACE--grid-formula
-        overmain-end
-        overmenu-end
-        overside-end
-    $END--grid-formula;
-// ------------------------------------------ merge main cols
-$grid-template-columns--merge:
-    $BEGIN--grid-formula
-        $OVERMENU--grid-formula
-        $OVERMAIN--grid-formula
-        $OVERSIDE--grid-formula
-    $END--grid-formula;
-// ------------------------------------------ merge with menu
-$grid-template-columns--merge-menu:
-    $BEGIN--grid-formula
-        $OVERMENU--grid-formula
-        overside-start
-        overmain-start
-            $MIDDLE-SPACE--grid-formula
-                side-start
-                    $MAIN--grid-formula
-                side-end
-            $MIDDLE-SPACE--grid-formula
-        overmain-end
-        overside-end
-    $END--grid-formula;
-// ------------------------------------------ merge with menu till screen end
-$grid-template-columns--merge-menu-screen:
-    $BEGIN--grid-formula
-        $SCREEN-SPACE--grid-formula
-            $OVERMENU--grid-formula
-            overside-start
-            overmain-start
-                $MIDDLE-SPACE--grid-formula
-                    side-start
-                        $MAIN--grid-formula
-                    side-end
-                $MIDDLE-SPACE--grid-formula
-            overmain-end
-            overside-end
-    $END--grid-formula;
-// ------------------------------------------ merge with side
-$grid-template-columns--merge-side:
-    $BEGIN--grid-formula
-        overmenu-start
-        overmain-start
-            $MIDDLE-SPACE--grid-formula
-                menu-start
-                    $MAIN--grid-formula
-                menu-end
-            $MIDDLE-SPACE--grid-formula
-        overmain-end
-        overmenu-end
-        $OVERSIDE--grid-formula
-    $END--grid-formula;
-// ------------------------------------------ merge with side till screen end
-$grid-template-columns--merge-side-screen:
-    $BEGIN--grid-formula
-            overmenu-start
-            overmain-start
-                $MIDDLE-SPACE--grid-formula
-                    menu-start
-                        $MAIN--grid-formula
-                    menu-end
-                $MIDDLE-SPACE--grid-formula
-            overmain-end
-            overmenu-end
-            $OVERSIDE--grid-formula
-        $SCREEN-SPACE--grid-formula
-    $END--grid-formula;
-// --------------------------------------------------------------
-
-
-// --------------------------------------------------------------
-// SUPPORT COLUMNS
-// --------------------------------------------------------------
-
-
-// --------------------------------------------------------------
-$grid-template-columns--short:
-    unquote(" [ ")
-        full-start
-        menu-start
-        overmain-start
-        main-start
-        side-start
-        a b
-    unquote(" ] ")
-            1fr
-                unquote(" [c d e midpoint] ")
-            1fr
-    unquote(" [ ")
-        full-end
-        menu-end
-        overmain-end
-        main-end
-        side-end
-        f g
-    unquote(" ] ");
-
-// --------------------------------------------------------------
-$grid-template-columns--overmain-cut-one:
-    unquote(" [full-start overmain-start overmenu-start overside-start] ")
-            0
-        unquote(" [ ")
-            menu-start side-start
-            main-start a
-        unquote(" ] ")
-            $CONTENT--grid-formula
-        unquote(" [ ")
-            main-end g
-            menu-end
-            side-end
-            overmain-end
-            overmenu-end
-            overside-end
-            full-end
-        unquote(" ] ")
-    ;
-$grid-template-columns--overmain-cut-two:
-        unquote(" [ ")
-            full-start
-            overmenu-start
-            overmain-start
-            overside-start
-            menu-start
-            side-start
-            main-start a
-        unquote(" ] ")
-            $CONTENT--grid-formula
-        unquote(" [ ")
-            main-end g
-            menu-end side-end
-        unquote(" ] ")
-            0
-    unquote(" [overmain-end overmenu-end overside-end full-end] ")
-    ;
-$grid-template-columns--overmain-half-one:
-    unquote(" [overmain-start full-start] ")
-            0
-        unquote(" [main-start menu-start side-start a] ")
-            $CONTENT--grid-formula
-        unquote(" [main-end menu-end side-end overmain-end full-end g] ")
-    ;
-
-$grid-template-columns--overmain-half-two:
-        unquote(" [overmain-start full-start main-start menu-start side-start a] ")
-            $CONTENT--grid-formula
-        unquote(" [main-end menu-end side-end g] ")
-            0
-    unquote(" [overmain-end full-end] ")
-    ;
-
-
-// --------------------------------------------------------------
-// EXTENDERS
-// --------------------------------------------------------------
-
-
-%grid-setup {
-
-    // grid setup
-    display:         grid;
-    align-items:     start;
-    grid-auto-flow:  row;
-    grid-auto-rows:  min-content;
-    grid-column-gap: 1*$grid-settings--column-gap;
-    grid-row-gap:    1*$grid-settings--row-gap;
-
-    // default template
-    grid-template-columns: $grid-template-columns--overmain;
-}
-
-%grid-template--full {
-    @media all and ($screenNotCompactGrid) {
-        grid-template-columns: $grid-template-columns--full;
-    }
-    @media all and ($screenForCompactGrid) {
-        grid-template-columns: $grid-template-columns--overmain;
-    }
-}
-
-
-// --------------------------------------------------------------
-// griz classes
-
-.grid {
-    @extend %grid-setup;
-    @extend %grid-template--full;
-    grid-column: full;
-    * {
-        grid-column: main;
-        margin-top:    0;
-        margin-bottom: 0;
-    }
-}
-
-// Major columns
-
-.grid--layer {
-    @extend %grid-setup;
-    grid-column: full;
-}
-.grid--overmain {
-    @extend %grid-setup;
-    grid-column: overmain;
-}
-
-// Minor columns
-
-.grid--side {
-    @extend %grid-setup;
-    grid-column: overside;
-}
-.grid--side-screen {
-    @extend %grid-setup;
-    grid-column: overside-start / full-end;
-}
-.grid--menu {
-    @extend %grid-setup;
-    grid-column: overmenu;
-}
-.grid--menu-screen {
-    @extend %grid-setup;
-    grid-column: full-start / overmenu-end;
-}
-
-// Merge columns
-
-.grid--merge {
-    @extend %grid-setup;
-    grid-column: overmenu-start / overside-end;
-}
-.grid--merge-menu {
-    @extend %grid-setup;
-    grid-column: overmenu-start / overmain-end;
-}
-.grid--merge-side {
-    @extend %grid-setup;
-    grid-column: overmain-start / overside-end;
-}
-.grid--merge-menu-screen {
-    @extend %grid-setup;
-    grid-column: full-start / overmain-end;
-}
-.grid--merge-side-screen {
-    @extend %grid-setup;
-    grid-column: overmain-start / full-end;
-}
-
-// Keep grid
-
-.grid--keep {
-    @extend %grid-setup;
-
-    // in single mode keep main column (for vertical gap)
-
-    grid-template-columns: $grid-template-columns--main;
-
-    // with grid components - keep grid layout for childrens (for background properties)
-
-    @media all and ($screenNotCompactGrid) {
-        &.grid--layer { grid-template-columns: $grid-template-columns--full; }
-        &.grid--merge { grid-template-columns: $grid-template-columns--merge; }
-        &.grid--merge-menu { grid-template-columns: $grid-template-columns--merge-menu; }
-        &.grid--merge-side { grid-template-columns: $grid-template-columns--merge-side; }
-        &.grid--merge-menu-screen { grid-template-columns: $grid-template-columns--merge-menu-screen; }
-        &.grid--merge-side-screen { grid-template-columns: $grid-template-columns--merge-side-screen; }
-    }
-    @media all and ($screenForCompactGrid) {
-        &.grid--layer,
-        &.grid--merge,
-        &.grid--merge-menu,
-        &.grid--merge-menu-screen,
-        &.grid--merge-side,
-        &.grid--merge-side-screen
-        {
-            grid-template-columns: $grid-template-columns--overmain;
-        }
-    }
-}
-
-// Halves
-
-.grid--half-one {
-    @extend %grid-setup;
-    grid-template-columns: $grid-template-columns--short;
-    grid-column: main-start / midpoint;
-}
-.grid--half-two {
-    @extend %grid-setup;
-    grid-template-columns: $grid-template-columns--short;
-    grid-column: midpoint / main-end;
-}
-.grid--half-screen-one {
-    @extend %grid-setup;
-    grid-template-columns: $grid-template-columns--overmain-cut-one;
-    grid-column: full-start / midpoint;
-}
-.grid--half-screen-two {
-    @extend %grid-setup;
-    grid-template-columns: $grid-template-columns--overmain-cut-two;
-    grid-column: d / full-end;
-}
-
-// Alignment
-
-.is-v-centered {
-    align-self: center;
-}
-.has-v-centered {
-    &>* { align-self: center; }
-}
-.has-v-slices {
-    grid-row-gap: 0;
+.is-centered {
+    text-align: center;
 }
 
 
 
-// --------------------------------------------- PENDING
-
-.grid--chapter {
-    @extend .grid;
-    $grid-settings--column-gap: $grid-settings--column-gap; // 1rem
-    padding-top:    1*$grid-settings--column-gap;
-    padding-bottom: 1*$grid-settings--column-gap;
-}
-.grid--as-main {
-    grid-template-columns: $grid-template-columns--main;
-}
-.grid--as-overmain {
-    grid-template-columns: $grid-template-columns--overmain;
-}
-
-
-
-
-[chapter]           { @extend .grid--chapter; }
-[layer]             { @extend .grid--layer; }
-[overmain]          { @extend .grid--overmain; }
-
-
-.grid:hover *:not(.box):not(.img) { background-color: $colorShy; }
-
-
-[half-left] { grid-column: main-start / midpoint; }
-[half-right] { grid-column: midpoint / main-end; }
-[halfscreen] { grid-column: full-start / midpoint; }
-[halfscreen-right] { grid-column: midpoint / full-end; }
-[side] { grid-column: side; }
-[side-screen] { grid-column: side-start / full-end; }
-[menu] { grid-column: menu; }
-[menu-screen] { grid-column: full-start / menu-end; }
-[merge] { grid-column: menu-start / side-end; }
-
-
-.box {
-    $grid-settings--column-gap: $grid-settings--column-gap; // 1rem
-    padding-top:    1*$grid-settings--column-gap;
-    padding-bottom: 1*$grid-settings--column-gap;
-    background-color: firebrick;
-    color: white;
-    &.badbox {
-        background-color: indigo;
-    }
-    &.altbox {
-        background-color: darkslategrey;
-    }
-}
-[box] { @extend .box; }
-
-.small {
-    font-size: 0.8em;
-}
-[small] { @extend .small; }
+@import "parts/try-supergrid-formula.scss";
+@import "parts/try-supergrid.scss";
 
