--- a/appDev/app6K/try-supergrid/styles/parts/try-supergrid-formula.scss
+++ b/appDev/app6K/try-supergrid/styles/parts/try-supergrid-formula.scss
@@ -1,25 +1,6 @@
-$colorShy: rgba(0,0,50,0.075);
-
-html {
-    font-family: Vollkorn;
-    cursor:default;
-}
-html, body { margin: 0; padding: 0; }
-
-p,ul,h1,h2 {
-    &:hover { background-color: $colorShy; }
-}
-
-.img {
-    padding-top: 40%;
-    background-color: goldenrod;
-}
-
-
-
 // --------------------------------------------------------------
 // MMS grid settings and formula
-// 2019.1.1
+// 2019.1.2
 //
 // Naming:
 // screen → | [menu] [main] [side] | ← screen
@@ -36,16 +17,33 @@ p,ul,h1,h2 {
 
 // ------------------------------------------ settings
 
-$grid-settings--screensize-for-compact-view: 900px;
+$grid-settings--screensize-for-compact-view: 600px; // one column
+$grid-settings--screensize-for-reduced-view: 900px; // one column with screen space
 
-$screenForCompactGrid: 'max-width: #{$grid-settings--screensize-for-compact-view}';
-$screenNotCompactGrid: 'min-width: #{$grid-settings--screensize-for-compact-view + 1}';
 
 $grid-settings--column-gap:    1.0rem;
 $grid-settings--row-gap:       1.0rem;
 $grid-settings--screenspacer:  minmax(0, 1fr);
 $grid-settings--width-of-menu: 16vw;
 $grid-settings--width-of-side: 16vw;
+
+$grid-settings--max-width-for-main: 700px;
+
+
+
+
+$screenForCompactGrid: 'max-width: #{$grid-settings--screensize-for-compact-view}';
+$screenNotCompactGrid: 'min-width: #{$grid-settings--screensize-for-compact-view + 1}';
+$screenForReducedGrid: 'max-width: #{$grid-settings--screensize-for-reduced-view}';
+$screenNotReducedGrid: 'min-width: #{$grid-settings--screensize-for-reduced-view + 1}';
+$screenForClassicGrid: 'min-width: #{$grid-settings--screensize-for-reduced-view + 1}';
+$screenNotClassicGrid: 'max-width: #{$grid-settings--screensize-for-reduced-view}';
+
+
+$w: $grid-settings--max-width-for-main;
+$g: $grid-settings--column-gap;
+// unit = 1/6 of main column
+$grid-settings--main-unit: minmax(0, calc( (#{$w} - (5*#{$g})) / 6 ) );
 
 // ------------------------------------------ formulas
 
@@ -55,16 +53,28 @@ $SCREEN-SPACE--grid-formula: unquote(" ] ") $grid-settings--screenspacer unquote
 $MIDDLE-SPACE--grid-formula: unquote(" ] ") 0 unquote(" [ ");
 
 $CONTENT--grid-formula:
-    1fr unquote(" [b] ")
-    1fr unquote(" [c] ")
-    1fr unquote(" [d midpoint] ")
-    1fr unquote(" [e] ")
-    1fr unquote(" [f] ")
-    1fr ;
+    $grid-settings--main-unit unquote(" [b] ")
+    $grid-settings--main-unit unquote(" [c] ")
+    $grid-settings--main-unit unquote(" [d midpoint] ")
+    $grid-settings--main-unit unquote(" [e] ")
+    $grid-settings--main-unit unquote(" [f] ")
+    $grid-settings--main-unit ;
 $MAIN--grid-formula:
     main-start a
         unquote(" ] ")
             $CONTENT--grid-formula
+        unquote(" [ ")
+    main-end g
+    ;
+$MAIN-NO-LIMIT--grid-formula:
+    main-start a
+        unquote(" ] ")
+            1fr unquote(" [b] ")
+            1fr unquote(" [c] ")
+            1fr unquote(" [d midpoint] ")
+            1fr unquote(" [e] ")
+            1fr unquote(" [f] ")
+            1fr
         unquote(" [ ")
     main-end g
     ;
@@ -145,6 +155,42 @@ $grid-template-columns--overmain:
         overmenu-end
         overside-end
     $END--grid-formula;
+// ------------------------------------------ overmain without width limit
+$grid-template-columns--overmain-no-limit:
+    $BEGIN--grid-formula
+        overmain-start
+        overmenu-start
+        overside-start
+            $MIDDLE-SPACE--grid-formula
+                menu-start
+                side-start
+                    $MAIN-NO-LIMIT--grid-formula
+                side-end
+                menu-end
+            $MIDDLE-SPACE--grid-formula
+        overmain-end
+        overmenu-end
+        overside-end
+    $END--grid-formula;
+// ------------------------------------------ overmain with screen space
+$grid-template-columns--overmain-spaced:
+    $BEGIN--grid-formula
+        $SCREEN-SPACE--grid-formula
+            overmain-start
+            overmenu-start
+            overside-start
+                $MIDDLE-SPACE--grid-formula
+                    menu-start
+                    side-start
+                        $MAIN--grid-formula
+                    side-end
+                    menu-end
+                $MIDDLE-SPACE--grid-formula
+            overmain-end
+            overmenu-end
+            overside-end
+        $SCREEN-SPACE--grid-formula
+    $END--grid-formula;
 // ------------------------------------------ merge main cols
 $grid-template-columns--merge:
     $BEGIN--grid-formula
@@ -181,6 +227,24 @@ $grid-template-columns--merge-menu-screen:
             overmain-end
             overside-end
     $END--grid-formula;
+// ------------------------------------------
+$grid-template-columns--merge-menu-screen-reduced:
+    $BEGIN--grid-formula
+        $SCREEN-SPACE--grid-formula
+            overmenu-start
+            overside-start
+            overmain-start
+                $MIDDLE-SPACE--grid-formula
+                    menu-start
+                    side-start
+                        $MAIN--grid-formula
+                    side-end
+                    menu-end
+                $MIDDLE-SPACE--grid-formula
+            overmain-end
+            overside-end
+            overmenu-end
+    $END--grid-formula;
 // ------------------------------------------ merge with side
 $grid-template-columns--merge-side:
     $BEGIN--grid-formula
@@ -208,6 +272,24 @@ $grid-template-columns--merge-side-screen:
             overmain-end
             overmenu-end
             $OVERSIDE--grid-formula
+        $SCREEN-SPACE--grid-formula
+    $END--grid-formula;
+// ------------------------------------------ merge with side till screen end
+$grid-template-columns--merge-side-screen-reduced:
+    $BEGIN--grid-formula
+            overmenu-start
+            overside-start
+            overmain-start
+                $MIDDLE-SPACE--grid-formula
+                    menu-start
+                    side-start
+                        $MAIN--grid-formula
+                    side-end
+                    menu-end
+                $MIDDLE-SPACE--grid-formula
+            overmain-end
+            overmenu-end
+            overside-end
         $SCREEN-SPACE--grid-formula
     $END--grid-formula;
 // --------------------------------------------------------------
@@ -294,225 +376,5 @@ $grid-template-columns--overmain-half-two:
     ;
 
 
-// --------------------------------------------------------------
-// EXTENDERS
-// --------------------------------------------------------------
 
-
-%grid-setup {
-
-    // grid setup
-    display:         grid;
-    align-items:     start;
-    grid-auto-flow:  row;
-    grid-auto-rows:  min-content;
-    grid-column-gap: 1*$grid-settings--column-gap;
-    grid-row-gap:    1*$grid-settings--row-gap;
-
-    // default template
-    grid-template-columns: $grid-template-columns--overmain;
-}
-
-%grid-template--full {
-    @media all and ($screenNotCompactGrid) {
-        grid-template-columns: $grid-template-columns--full;
-    }
-    @media all and ($screenForCompactGrid) {
-        grid-template-columns: $grid-template-columns--overmain;
-    }
-}
-
-
-// --------------------------------------------------------------
-// griz classes
-
-.grid {
-    @extend %grid-setup;
-    @extend %grid-template--full;
-    grid-column: full;
-    * {
-        grid-column: main;
-        margin-top:    0;
-        margin-bottom: 0;
-    }
-}
-
-// Major columns
-
-.grid--layer {
-    @extend %grid-setup;
-    grid-column: full;
-}
-.grid--overmain {
-    @extend %grid-setup;
-    grid-column: overmain;
-}
-
-// Minor columns
-
-.grid--side {
-    @extend %grid-setup;
-    grid-column: overside;
-}
-.grid--side-screen {
-    @extend %grid-setup;
-    grid-column: overside-start / full-end;
-}
-.grid--menu {
-    @extend %grid-setup;
-    grid-column: overmenu;
-}
-.grid--menu-screen {
-    @extend %grid-setup;
-    grid-column: full-start / overmenu-end;
-}
-
-// Merge columns
-
-.grid--merge {
-    @extend %grid-setup;
-    grid-column: overmenu-start / overside-end;
-}
-.grid--merge-menu {
-    @extend %grid-setup;
-    grid-column: overmenu-start / overmain-end;
-}
-.grid--merge-side {
-    @extend %grid-setup;
-    grid-column: overmain-start / overside-end;
-}
-.grid--merge-menu-screen {
-    @extend %grid-setup;
-    grid-column: full-start / overmain-end;
-}
-.grid--merge-side-screen {
-    @extend %grid-setup;
-    grid-column: overmain-start / full-end;
-}
-
-// Keep grid
-
-.grid--keep {
-    @extend %grid-setup;
-
-    // in single mode keep main column (for vertical gap)
-
-    grid-template-columns: $grid-template-columns--main;
-
-    // with grid components - keep grid layout for childrens (for background properties)
-
-    @media all and ($screenNotCompactGrid) {
-        &.grid--layer { grid-template-columns: $grid-template-columns--full; }
-        &.grid--merge { grid-template-columns: $grid-template-columns--merge; }
-        &.grid--merge-menu { grid-template-columns: $grid-template-columns--merge-menu; }
-        &.grid--merge-side { grid-template-columns: $grid-template-columns--merge-side; }
-        &.grid--merge-menu-screen { grid-template-columns: $grid-template-columns--merge-menu-screen; }
-        &.grid--merge-side-screen { grid-template-columns: $grid-template-columns--merge-side-screen; }
-    }
-    @media all and ($screenForCompactGrid) {
-        &.grid--layer,
-        &.grid--merge,
-        &.grid--merge-menu,
-        &.grid--merge-menu-screen,
-        &.grid--merge-side,
-        &.grid--merge-side-screen
-        {
-            grid-template-columns: $grid-template-columns--overmain;
-        }
-    }
-}
-
-// Halves
-
-.grid--half-one {
-    @extend %grid-setup;
-    grid-template-columns: $grid-template-columns--short;
-    grid-column: main-start / midpoint;
-}
-.grid--half-two {
-    @extend %grid-setup;
-    grid-template-columns: $grid-template-columns--short;
-    grid-column: midpoint / main-end;
-}
-.grid--half-screen-one {
-    @extend %grid-setup;
-    grid-template-columns: $grid-template-columns--overmain-cut-one;
-    grid-column: full-start / midpoint;
-}
-.grid--half-screen-two {
-    @extend %grid-setup;
-    grid-template-columns: $grid-template-columns--overmain-cut-two;
-    grid-column: d / full-end;
-}
-
-// Alignment
-
-.is-v-centered {
-    align-self: center;
-}
-.has-v-centered {
-    &>* { align-self: center; }
-}
-.has-v-slices {
-    grid-row-gap: 0;
-}
-
-
-
-// --------------------------------------------- PENDING
-
-.grid--chapter {
-    @extend .grid;
-    $grid-settings--column-gap: $grid-settings--column-gap; // 1rem
-    padding-top:    1*$grid-settings--column-gap;
-    padding-bottom: 1*$grid-settings--column-gap;
-}
-.grid--as-main {
-    grid-template-columns: $grid-template-columns--main;
-}
-.grid--as-overmain {
-    grid-template-columns: $grid-template-columns--overmain;
-}
-
-
-
-
-[chapter]           { @extend .grid--chapter; }
-[layer]             { @extend .grid--layer; }
-[overmain]          { @extend .grid--overmain; }
-
-
-.grid:hover *:not(.box):not(.img) { background-color: $colorShy; }
-
-
-[half-left] { grid-column: main-start / midpoint; }
-[half-right] { grid-column: midpoint / main-end; }
-[halfscreen] { grid-column: full-start / midpoint; }
-[halfscreen-right] { grid-column: midpoint / full-end; }
-[side] { grid-column: side; }
-[side-screen] { grid-column: side-start / full-end; }
-[menu] { grid-column: menu; }
-[menu-screen] { grid-column: full-start / menu-end; }
-[merge] { grid-column: menu-start / side-end; }
-
-
-.box {
-    $grid-settings--column-gap: $grid-settings--column-gap; // 1rem
-    padding-top:    1*$grid-settings--column-gap;
-    padding-bottom: 1*$grid-settings--column-gap;
-    background-color: firebrick;
-    color: white;
-    &.badbox {
-        background-color: indigo;
-    }
-    &.altbox {
-        background-color: darkslategrey;
-    }
-}
-[box] { @extend .box; }
-
-.small {
-    font-size: 0.8em;
-}
-[small] { @extend .small; }
 
