--- a/appDev/app6K/try-supergrid/styles/parts/base-reset-html.scss
+++ b/appDev/app6K/try-supergrid/styles/parts/base-reset-html.scss
@@ -35,4 +35,44 @@ figure, figcaption, fieldset, legend {
     border:  0;
     white-space: normal;
 }
+//* ------------------------------------ markup standarts
+h1, h2, h3, h4, h5, h6, p, blockquote, ul, ol {
+    margin:  0;
+    padding: 0;
+}
+a {
+    color: inherit;
+    background-color: transparent;
+    text-decoration: underline;
+}
+ul, ol {
+    margin-left:  1.5em;
+}
+hr {
+    border: 0;
+    background: transparent;
+    box-shadow: none;
+    /* use as visual spacer */
+    display:    block;
+    font-size:  inherit;
+    min-height: 1.5em;
+}
+img {
+    border:    none;
+    max-width: 100%;
+}
+svg {
+    border:    none;
+    max-width: 100%;
+}
+table {
+    * {
+        text-align:     left;
+        vertical-align: top;
+    }
+    td {
+        padding-top:    0.5em;
+        padding-bottom: 0.5em;
+    }
+}
 /* eof html base */
